--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     }
 
     body {
-      background: black;
+      background-image: url('img/fondo.jpg');
+      background-size: cover; 
+      background-position: center; 
       display: flex;
       align-items: center;
       justify-content: center;
