--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <canvas width="800" height="600" id="game"></canvas>
   <div id="gameOverDialog">
     <p>Game Over</p>
+    <p id="finalScore">Final Score: 0</p>
     <button id="closeButton">Cerrar</button>
     <button id="replayButton">Volver a jugar</button>
   </div>
