configurando score maximo

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <p>Facil no?, sin embargo esto es UNFAIR PLANET SHOOTER por lo que aleatoriamente habra grupos que aunque juntes 3 planetas no se eliminaran, teniendo que agregar uno o mas planetas al grupo.</p>
     <p>Suerte, jajaja</p>
     <button id="startButton">Iniciar juego</button>
+    <button id="resetScoreButton" class="resetScoreButton">Reiniciar Score</button>
   </div>
   <script src="main.js"></script>
 </body>
