--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       padding: 10px 20px;
       cursor: pointer;
     }
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: black;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+    }
   </style>
 </head>
 <body>
@@ -52,5 +62,6 @@
     <button id="resetScoreButton" class="resetScoreButton">Reiniciar Score</button>
   </div>
   <script src="main.js"></script>
+  <footer>Espinosa Gabriela 21200592</footer>
 </body>
 </html>
