--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Examen T2</title>
+  <link rel="shortcut icon" href="img/planetas.png" type="image/x-icon">
+
   <meta charset="UTF-8">
   <style>
     html, body {
